--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nursery-backend",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,5 +14,9 @@
     "jade": "~1.11.0",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5"
   }
 }
